MDEV-20349: Assertion `to_len >= 8' failed in convert_to_printable

Use convert_to_printable function to write only non-empty ranges to the optimizer trace